--- a/app/src/main/res/menu/add_note_menu.xml
+++ b/app/src/main/res/menu/add_note_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/save_book"
         android:icon="@drawable/ic_save_black_24dp"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="ifRoom" />
 
 
